# vehicle_detection_haarcascades

./: CMakeLists.txt  vehicle_detection.cpp
